gccida/g1/visit_expression
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/visit_expression/src/ssa-ccp.c:712:4: error: expected ';' after expression
rtx v9; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/visit_expression/src/ssa-ccp.c:712:5: error: use of undeclared identifier 'v9'
rtx v9; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/visit_expression/src/ssa-ccp.c:713:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v10; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/visit_expression/src/ssa-ccp.c:714:4: error: expected ';' after expression
rtx v11; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/visit_expression/src/ssa-ccp.c:714:5: error: use of undeclared identifier 'v11'; did you mean 'v10'?
rtx v11; // rax 
    ^~~
    v10
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/visit_expression/src/ssa-ccp.c:713:14: note: 'v10' declared here
machine_mode v10; // ecx 
             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/visit_expression/src/ssa-ccp.c:734:4: error: expected ';' after expression
rtx v31; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/visit_expression/src/ssa-ccp.c:734:5: error: use of undeclared identifier 'v31'; did you mean 'v30'?
rtx v31; // rbp 
    ^~~
    v30
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/visit_expression/src/ssa-ccp.c:733:18: note: 'v30' declared here
 struct rtx_def *v30; // rax 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/visit_expression/src/ssa-ccp.c:745:4: error: expected ';' after expression
rtx const_value; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/visit_expression/src/ssa-ccp.c:745:5: error: use of undeclared identifier 'const_value'
rtx const_value; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/visit_expression/src/ssa-ccp.c:746:4: error: expected ';' after expression
rtx v43; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/visit_expression/src/ssa-ccp.c:746:5: error: use of undeclared identifier 'v43'
rtx v43; // rcx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/visit_expression/src/ssa-ccp.c:747:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v44; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/visit_expression/src/ssa-ccp.c:771:1: error: use of undeclared identifier 'edge_info_0'; did you mean 'edge_info'?
edge_info_0[( int)v13] = flow_edges; 
^~~~~~~~~~~
edge_info
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/visit_expression/src/ssa-ccp.c:106:14: note: 'edge_info' declared here
static edge *edge_info;
             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/visit_expression/src/ssa-ccp.c:777:17: error: expected ')'
|| ( v4 = ( rtx)insn[2], *( _WORD *)v4 != 47) && ( v4 = single_set_2( insn, v4)) == 0LL ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/visit_expression/src/ssa-ccp.c:777:4: note: to match this '('
|| ( v4 = ( rtx)insn[2], *( _WORD *)v4 != 47) && ( v4 = single_set_2( insn, v4)) == 0LL ) 
   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/visit_expression/src/ssa-ccp.c:782:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v5 = ( __int64)v4[1]; 
               ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/visit_expression/src/ssa-ccp.c:811:28: error: expected expression
v20->const_value = *( rtx *)( *( _QWORD *)&insn[2] + 16LL); 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/visit_expression/src/ssa-ccp.c:831:1: error: use of undeclared identifier 'edge_info_0'; did you mean 'edge_info'?
edge_info_0[( int)v22] = flow_edges; 
^~~~~~~~~~~
edge_info
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/visit_expression/src/ssa-ccp.c:106:14: note: 'edge_info' declared here
static edge *edge_info;
             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/visit_expression/src/ssa-ccp.c:871:18: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
v30 = gen_rtx( ( rtx_code)*v24, ( machine_mode)*( ( unsigned __int8 *)v24 + 2)); 
                 ^~~~~~~~
                 rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/visit_expression/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/visit_expression/src/ssa-ccp.c:871:27: error: invalid operands to binary expression ('int (rtx, enum rtx_code)' (aka 'int (struct rtx_def *, enum rtx_code)') and 'unsigned short *')
v30 = gen_rtx( ( rtx_code)*v24, ( machine_mode)*( ( unsigned __int8 *)v24 + 2)); 
               ~~~~~~~~~~~^~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/visit_expression/src/obj/ssa-ccp.o] Error 1
